--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-            </plugin>
+            </plugin>            
+            <!-- SonarQube plugin for code analysis -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
+             <plugin>
         </plugins>
     </build>
     <dependencies>
