--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.0.2</version>
+                <configuration>
+                    <sonar.host.url>http://107.23.110.163:9000/</sonar.host.url>
+                    <!-- Other SonarQube configurations -->
+                </configuration>
             </plugin>
         </plugins>
     </build>
