--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,25 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url>http://192.168.2.174:9000</sonar.host.url>
+                <!-- Other SonarQube properties -->
+            </properties>
+        </profile>
+        <!-- Other profiles -->
+    </profiles>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 </project>
