--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>test</groupId>
     <artifactId>maven-project-with-tests</artifactId>
@@ -17,7 +19,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-            </plugin>            
+            </plugin>
             <!-- SonarQube plugin for code analysis -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
@@ -37,7 +39,8 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
-        <profiles>
+    </dependencies>
+    <profiles>
         <profile>
             <id>sonar</id>
             <activation>
@@ -51,11 +54,9 @@
         </profile>
         <!-- Other profiles -->
     </profiles>
-    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 </project>
